docs-archive/apache-airflow-providers-microsoft-azure/4.3.0/_sources/_api/airflow/providers/microsoft/azure/sensors/data_factory/index.rst.txt
:py:mod:`airflow.providers.microsoft.azure.sensors.data_factory`
================================================================

.. py:module:: airflow.providers.microsoft.azure.sensors.data_factory


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.microsoft.azure.sensors.data_factory.AzureDataFactoryPipelineRunStatusSensor




.. py:class:: AzureDataFactoryPipelineRunStatusSensor(*, run_id, azure_data_factory_conn_id = AzureDataFactoryHook.default_conn_name, resource_group_name = None, factory_name = None, **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Checks the status of a pipeline run.

   :param azure_data_factory_conn_id: The connection identifier for connecting to Azure Data Factory.
   :param run_id: The pipeline run identifier.
   :param resource_group_name: The resource group name.
   :param factory_name: The data factory name.

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['azure_data_factory_conn_id', 'resource_group_name', 'factory_name', 'run_id']

      

   .. py:attribute:: ui_color
      :annotation: = #50e6ff

      

   .. py:method:: poke(context)

      Function that the sensors defined while deriving this class should
      override.



